added other stuff to display

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,5 +1,5 @@
 #main_container {
-  border: solid red 2px;
+  //border: solid red 2px;
 }
 
 * {
@@ -8,15 +8,23 @@
 }
 
 .col {
-  margin-top: 2rem;
-  border: solid red 2px;
   justify-content: space-evenly;
   display: inline-flex;
   scroll-behaviour: smooth;
   overflow-x: scroll;
 }
 
-.card {
+#card {
   height: auto;
-  width: auto;
+  width: 5rem;
+  justify-content: space-between;
+}
+
+h2 {
+  margin-top: 2rem;
+}
+
+.card-container {
+  border: solid red 2px;
+  margin-top: 2rem;
 }
